.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:33:03 **** Incremental Build of configuration Debug for project DAC ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "DAC.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\PC_6285_\STM32CubeIDE\workspace_1.16.1\DAC\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DAC.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: DAC.elf
 
arm-none-eabi-size  DAC.elf 
arm-none-eabi-objdump -h -S DAC.elf  > "DAC.list"
   text	   data	    bss	    dec	    hex	filename
  36388	    252	   9028	  45668	   b264	DAC.elf
Finished building: default.size.stdout
 
Finished building: DAC.list
 
11:33:07 **** Incremental Build of configuration Debug for project DAC ****
make -j20 all 
arm-none-eabi-size  DAC.elf 
   text	   data	    bss	    dec	    hex	filename
  36388	    252	   9028	  45668	   b264	DAC.elf
Finished building: default.size.stdout
 
11:33:28 **** Incremental Build of configuration Debug for project DAC ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:122:73: error: lvalue required as left operand of assignment
  122 |           HAL_DAC_SetValue(&hdac, DAC_CHANNEL_2, DAC_ALIGN_12B_R, 4095) = dac_value; //logic analyzerda okuma için deneme
      |                                                                         ^
make: *** [Core/Src/subdir.mk:52: Core/Src/main.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.
11:33:45 **** Incremental Build of configuration Debug for project DAC ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "DAC.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\PC_6285_\STM32CubeIDE\workspace_1.16.1\DAC\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DAC.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: DAC.elf
 
arm-none-eabi-size  DAC.elf 
arm-none-eabi-objdump -h -S DAC.elf  > "DAC.list"
   text	   data	    bss	    dec	    hex	filename
  36400	    252	   9036	  45688	   b278	DAC.elf
Finished building: default.size.stdout
 
Finished building: DAC.list
 
11:35:30 **** Incremental Build of configuration Debug for project DAC ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "DAC.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\PC_6285_\STM32CubeIDE\workspace_1.16.1\DAC\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DAC.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: DAC.elf
 
arm-none-eabi-size  DAC.elf 
arm-none-eabi-objdump -h -S DAC.elf  > "DAC.list"
   text	   data	    bss	    dec	    hex	filename
  36432	    252	   9036	  45720	   b298	DAC.elf
Finished building: default.size.stdout
 
Finished building: DAC.list
 
11:36:26 **** Incremental Build of configuration Debug for project DAC ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "DAC.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\PC_6285_\STM32CubeIDE\workspace_1.16.1\DAC\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DAC.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: DAC.elf
 
arm-none-eabi-size  DAC.elf 
arm-none-eabi-objdump -h -S DAC.elf  > "DAC.list"
   text	   data	    bss	    dec	    hex	filename
  36432	    252	   9036	  45720	   b298	DAC.elf
Finished building: default.size.stdout
 
Finished building: DAC.list
 
